Update index.html with Calvert Ipsum link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	<title>Welcome</title>
 </head>
 <body>
-	<p>You're probably looking for one of two things:
+	<p>You're probably looking for one of three things:
 	<p>The <a href="http://patrickmaynard.github.io/composer-tour/baltimore/">Baltimore composer walking tour</a>
+	<p>... or ...
+	<p><a href="http://patrickmaynard.github.io/calvert-ipsum/">Calvert Ipsum</a>
 	<p>... or ...
 	<p>My <a href="http://www.patrickmaynard.com">main site</a>.
 	<p>Cheers!
